--- a/test/requirements.txt
+++ b/test/requirements.txt
@@ -1,7 +1,7 @@
 # Install Pytorch & other libraries
 torch==2.4.1
 tensorboard
-flash-attn
+flash-attn==2.7        # Dao-AILab FlashAttention package; adjust version as needed
 liger-kernel==0.4.2
 setuptools<71.0.0
 deepspeed==0.15.4
