--- a/test/requirements.txt
+++ b/test/requirements.txt
@@ -1,9 +1,14 @@
 # Install Pytorch & other libraries
 # --no-build-isolation needed for flash-attn
-# Preinstall torch Before Installing the Requirements File
+# Preinstall cudatoolkit and torch Before Installing the Requirements File
 # then install the remaining packages with the --no-build-isolation flag.
+# conda install -c conda-forge cudatoolkit-dev
 # pip install torch==2.4.1
 # pip install --no-build-isolation -r requirements.txt
+
+# to test:
+# # python -c "import torch; major, minor = torch.cuda.get_device_capability(); assert major >= 8, 'Hardware not supported for Flash Attention'; print(f'Compute capability (version): {major}.{minor} — your hardware is supported')"
+
 
 # torch==2.4.1
 tensorboard
