--- a/test/llama-3-1-8b-qlora.yaml
+++ b/test/llama-3-1-8b-qlora.yaml
@@ -8,7 +8,7 @@ use_liger: true
 bf16: true
 tf32: true
 #output_dir: runs/llama-3-1-8b-math-orca-qlora-10k-ep1
-output_dir: .
+output_dir: runs
 
 # Dataset arguments
 dataset_id_or_path: train_dataset.json
