--- a/test/fine-tune-sft-config.yaml
+++ b/test/fine-tune-sft-config.yaml
@@ -25,12 +25,12 @@ lora_alpha: 16
 
 # Training arguments
 num_train_epochs: 1
-per_device_train_batch_size: 4
+per_device_train_batch_size: 1
 gradient_accumulation_steps: 4
 gradient_checkpointing: true
 gradient_checkpointing_kwargs:
   use_reentrant: false
-learning_rate: 2.0e-4
+learning_rate: 1.0e-4
 lr_scheduler_type: constant
 warmup_ratio: 0.1
 
@@ -43,7 +43,7 @@ save_strategy: "epoch"
 seed: 42
 
 # Hugging Face Hub
-push_to_hub: true
+push_to_hub: false
 hub_model_id: openchat_3.5_minecraft
 hub_strategy: every_save
 
